--- a/src/arch/Cargo.toml
+++ b/src/arch/Cargo.toml
@@ -14,6 +14,7 @@ libc = ">=0.2.39"
 vm-memory = { version = ">=0.13", features = ["backend-mmap"] }
 
 arch_gen = { path = "../arch_gen" }
+smbios = { path = "../smbios" }
 utils = { path = "../utils" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
